[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Juan Pablo Quiroga <juan.quiroga@liftit.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.116"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
